Null Inventory Bug Fix Part Two. Compleasted. Chests Now save and load correctly and the contents are displayed in the chest panel.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ sysinfo.txt
 crashlytics-build.properties
 
 /UserSettings/Layouts/default-2022.dwlt
+/Assets/TextMesh Pro
+*.meta
+/Data/data.dat
+/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+/UserSettings/EditorUserSettings.asset
+/Assets/WindowsBeLike/Fonts
+/Assets/WindowsBeLike
