--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ crashlytics-build.properties
 /UserSettings/EditorUserSettings.asset
 /Assets/WindowsBeLike/Fonts
 /Assets/WindowsBeLike
+/Data/data.json
+/UserSettings/Search.settings
